# pathsql

./: .gitignore  alembic.ini  pyproject.toml
dev/: migrate.py  tdb.py
dev/fill/: case_conference_convert.py  case_convert.py  webpath_convert.py
pathsql/: app.py
pathsql/databases/: __init__.py  case.py  dictionary.py  webpath.py
